add fourtunes command

--- a/memes.yaml
+++ b/memes.yaml
@@ -1,5 +1,9 @@
 welcome:
   anime: Um otaku entrou no grupo!
   cartoon: Sinto cheiro de otaku...
+
 slaps:
   - Minha mão na sua cara
+
+fortunes:
+  - Dedo no cu e gritaria
