--- a/memes.yaml
+++ b/memes.yaml
@@ -1,9 +1,12 @@
-welcome:
-  anime: Um otaku entrou no grupo!
-  cartoon: Sinto cheiro de otaku...
+fortunes:
+  - Dedo no cu e gritaria
+
+memes:
+  key: value
 
 slaps:
   - Minha mão na sua cara
 
-fortunes:
-  - Dedo no cu e gritaria
+welcome:
+  anime: Um otaku entrou no grupo!
+  cartoon: Sinto cheiro de otaku...
