--- a/memes.yaml
+++ b/memes.yaml
@@ -12,7 +12,7 @@ replies:
 
 slaps:
   - "Minha mão na sua cara"
-  - "Sua cara na minha mão"
+  - "Surra de 🍆 mole na tua cara"
 
 welcome:
   anime: "Um otaku entrou no grupo!"
