--- a/memes.yaml
+++ b/memes.yaml
@@ -9,6 +9,8 @@ replies:
   awk:
     - "Eu faço minhas finanças pessoais usando o AWK!"
     - "Oi, meu nome é @colemaker, tenho 20 anos e já escrevi um script para AWK de 300 linhas"
+  cu:
+    - "Nosso cu 👀"
 
 slaps:
   - "Minha mão na sua cara"
