--- a/memes.yaml
+++ b/memes.yaml
@@ -8,7 +8,9 @@ replies:
   cu:
     - "Nosso cu 👀"
   vai:
-    - "Vai nada"
+    - "Vai nada!"
+  vão:
+    - "Vão nada!"
   valeu:
     - "Dez conto!"
 
