remove exclamantion mark

--- a/memes.yaml
+++ b/memes.yaml
@@ -8,9 +8,9 @@ replies:
   cu:
     - "Nosso cu 👀"
   vai:
-    - "Vai nada!"
+    - "Vai nada"
   vao:
-    - "Vão nada!"
+    - "Vão nada"
   valeu:
     - "Dez conto!"
 
