--- a/memes.yaml
+++ b/memes.yaml
@@ -21,3 +21,9 @@ slaps:
 welcome:
   anime: "Um otaku entrou no grupo!"
   cartoon: "Sinto cheiro de otaku..."
+
+help:
+  - alguem me ajuda
+  - alguem ajuda
+  - alguem pode
+  - alguem poderia
