add more phrases

--- a/memes.yaml
+++ b/memes.yaml
@@ -25,5 +25,7 @@ welcome:
 help:
   - alguem me ajuda
   - alguem ajuda
+  - alguem ajudaria
   - alguem pode
   - alguem poderia
+  - alguem poderia me ajudar
