use plural of help

--- a/memes.yaml
+++ b/memes.yaml
@@ -22,7 +22,7 @@ welcome:
   anime: "Um otaku entrou no grupo!"
   cartoon: "Sinto cheiro de otaku..."
 
-help:
+helps:
   - alguem me ajuda
   - alguem ajuda
   - alguem ajudaria
