add more 'slap' meme

--- a/memes.yaml
+++ b/memes.yaml
@@ -19,6 +19,8 @@ replies:
 slaps:
   - "Minha mão na sua cara"
   - "Surra de 🍆 mole na tua cara"
+  - "Já escutou o belo som da minha mão batendo na sua cara?"
+  - "Só não meto a mão na sua cara porque não costumo colocar minha mão em lixo!"
 
 welcome:
   anime: "Um otaku entrou no grupo!"
