--- a/memes.yaml
+++ b/memes.yaml
@@ -15,6 +15,8 @@ replies:
     - "Dez conto!"
   obvio:
     - "Óbvio que não"
+  fonte:
+    - "Fonte: Confia em mim, cara"
 
 slaps:
   - "Minha mão na sua cara"
