add 'reply' meme

--- a/memes.yaml
+++ b/memes.yaml
@@ -18,6 +18,8 @@ replies:
     - "Óbvio que não"
   fonte:
     - "Fonte: Confia em mim, cara"
+  nada:
+    - "... que é bom, nada né!"
 
 slaps:
   - "Minha mão na sua cara"
