change 'nada' reply

--- a/memes.yaml
+++ b/memes.yaml
@@ -19,7 +19,7 @@ replies:
   fonte:
     - "Fonte: Confia em mim, cara"
   nada:
-    - "... que é bom, nada né!"
+    - "que é bom nada"
 
 slaps:
   - "Minha mão na sua cara"
