--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ flask==2.0.2
 fuzzywuzzy==0.18.0
 google-cloud-vision==2.6.2
 gunicorn==20.1.0
+levenshtein==0.16.0
 python-telegram-bot==13.7
 pyyaml==6.0
