--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ fuzzywuzzy==0.18.0
 google-cloud-vision==2.6.2
 gunicorn==20.1.0
 levenshtein==0.16.0
+requests==2.26.0
 python-telegram-bot==13.7
 pyyaml==6.0
