--- a/memes.yaml
+++ b/memes.yaml
@@ -18,6 +18,8 @@ replies:
     - "Óbvio que não"
   fonte:
     - "Fonte: Confia em mim, cara"
+  this:
+    - "That"
 
 slaps:
   - "Minha mão na sua cara"
