--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,7 +20,7 @@ jobs:
         uses: google-github-actions/deploy-cloudrun@v1
         with:
           service: delduca
-          image: gcr.io/cloudrun/delduca
+          # image: gcr.io/cloudrun/delduca
 
       - name: Check
         run: 'curl -X POST "${{ steps.deploy.outputs.url }}" -H "Content-Type: application/json" -d "{}"'
