--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,8 +17,20 @@ jobs:
         with:
           credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
 
-      - name: Deploy
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: oauth2accesstoken
+          password: ${{ steps.auth.outputs.access_token }}
+          registry: us-central1-docker.pkg.dev
+
+      - name: Build and Push Container
+        run: |-
+          docker build -t us-central1-docker.pkg.dev/bots-for-telegram/cloud-run-source-deploy/delduca:latest .
+          docker push us-central1-docker.pkg.dev/bots-for-telegram/cloud-run-source-deploy/delduca:latest"
+
+      - name: Deploy to Cloud Run
         uses: google-github-actions/deploy-cloudrun@v1
         with:
           service: delduca
-          image: us-central1-docker.pkg.dev/bots-for-telegram/cloud-run-source-deploy/delduca
+          image: us-central1-docker.pkg.dev/bots-for-telegram/cloud-run-source-deploy/delduca:latest
