--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,10 +12,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Authenticate to Google Cloud
+      - id: auth
+        name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v0
         with:
-          token_format: access_token
           credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
 
       - name: Login to Docker Hub
