Add missing token

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,6 +16,7 @@ jobs:
         name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v0
         with:
+          token_format: access_token
           credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
 
       - name: Login to Docker Hub
