--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,14 +16,14 @@ jobs:
         name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v0
         with:
-          token_format: access_token
+          # token_format: access_token
           credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: oauth2accesstoken
-          password: ${{ steps.auth.outputs.access_token }}
+          password: "${{ steps.auth.outputs.access_token }}"
           registry: us-central1-docker.pkg.dev
 
       - name: Build and Push Container
