--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,19 +12,25 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - id: auth
-        name: Authenticate to Google Cloud
+      - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v1
         with:
-          # token_format: access_token
           credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v1
         with:
-          username: oauth2accesstoken
-          password: "${{ steps.auth.outputs.access_token }}"
-          registry: us-central1-docker.pkg.dev
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+
+      - name: Configure Docker
+        run: gcloud auth configure-docker --quiet
+
+      # - name: Login to Docker Hub
+      #   uses: docker/login-action@v2
+      #   with:
+      #     username: oauth2accesstoken
+      #     password: "${{ steps.auth.outputs.access_token }}"
+      #     registry: us-central1-docker.pkg.dev
 
       - name: Build and Push Container
         run: |-
