Change image repository

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -34,11 +34,11 @@ jobs:
 
       - name: Build and Push Container
         run: |-
-          docker build -t us-central1-docker.pkg.dev/bots-for-telegram/cloud-run-source-deploy/delduca:latest .
-          docker push us-central1-docker.pkg.dev/bots-for-telegram/cloud-run-source-deploy/delduca:latest
+          docker build -t gcr.io/bots-for-telegram/delduca:latest .
+          docker push gcr.io/bots-for-telegram/delduca:latest
 
       - name: Deploy to Cloud Run
         uses: google-github-actions/deploy-cloudrun@v1
         with:
           service: delduca
-          image: us-central1-docker.pkg.dev/bots-for-telegram/cloud-run-source-deploy/delduca:latest
+          image: gcr.io/bots-for-telegram/delduca:latest
