--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,4 +24,9 @@ jobs:
 
       - name: Deploy to Cloud Run
         run: |
-          gcloud run deploy ${{ secrets.SERVICE_NAME }} --source $(pwd) --region us-central1 --allow-unauthenticated --platform managed --set-env-vars TELEGRAM_TOKEN=${{ secrets.TELEGRAM_TOKEN }}
+          gcloud run deploy ${{ secrets.SERVICE_NAME }} \
+            --source $(pwd) \
+            --region us-central1 \
+            --allow-unauthenticated \
+            --platform managed \
+            --set-env-vars TELEGRAM_TOKEN=${{ secrets.TELEGRAM_TOKEN }}
