--- a/memes.yaml
+++ b/memes.yaml
@@ -20,6 +20,8 @@ replies:
     - "Fonte: Confia em mim, cara"
   this:
     - "That"
+  oi:
+    - "Oi, quer tc?"
 
 slaps:
   - "Minha mão na sua cara"
