Add welcome meme

--- a/memes.yaml
+++ b/memes.yaml
@@ -32,6 +32,7 @@ slaps:
 welcome:
   anime: "Um otaku entrou no grupo!"
   cartoon: "Sinto cheiro de otaku..."
+  adult: "Tirem as crianças da sala!!!"
 
 helps:
   - alguem me ajuda
