--- a/memes.yaml
+++ b/memes.yaml
@@ -33,6 +33,8 @@ welcome:
   anime: "Um otaku entrou no grupo!"
   cartoon: "Sinto cheiro de otaku..."
   adult: "Tirem as crianças da sala!!!"
+  money: "Já chegou o disco voador!"
+  animal: "Abriram as porteiras e o animal tá solto"
 
 helps:
   - alguem me ajuda
