--- a/memes.yaml
+++ b/memes.yaml
@@ -8,6 +8,7 @@ replies:
     - "Oi, meu nome é @colemaker, tenho 20 anos e já escrevi um script para AWK de 300 linhas"
   cu:
     - "Nosso cu 👀"
+    - "Bite my shiny metal ass! 🤖"
   vai:
     - "Vai nada"
   vao:
