--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ fuzzywuzzy==0.18.0
 google-cloud-vision==3.3.0
 gunicorn==20.1.0
 levenshtein==0.20.9
+openai==0.27.0
 python-telegram-bot==13.13
 pyyaml==6.0
