--- a/memes.yaml
+++ b/memes.yaml
@@ -49,7 +49,7 @@ helps:
   - alguem entende
 
 porn:
-  - Tirem as crianças da sala!!! 🍌
+  - Tirem as crianças da sala!!! 🙈
 
 likelihoods:
   - UNKNOWN
