--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ fuzzywuzzy==0.18.0
 google-cloud-vision==3.3.0
 gunicorn==20.1.0
 levenshtein==0.20.9
+lxml==4.9.2
 markdown==3.4.1
 openai==0.27.0
 python-telegram-bot==13.13
