--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,10 +24,6 @@ jobs:
 
       - name: Deploy to Cloud Run
         run: |
-          gcloud run deploy ${{ secrets.SERVICE_NAME }} \
-            --source $(pwd) \
-            --region us-central1 \
-            --allow-unauthenticated \
-            --platform managed \
-            --set-env-vars TELEGRAM_TOKEN=${{ secrets.TELEGRAM_TOKEN }} \
-            --set-env-vars OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
+          gcloud config set run/region ${{ secrets.REGION }}
+          gcloud run deploy ${{ secrets.SERVICE_NAME }} --source $(pwd) --allow-unauthenticated --platform managed --set-env-vars TELEGRAM_TOKEN=${{ secrets.TELEGRAM_TOKEN }} --set-env-vars OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
+          gcloud run services update-traffic ${{ secrets.SERVICE_NAME }} --to-latest
