Add rate limiting

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ google-cloud-vision==3.4.0
 gunicorn==20.1.0
 levenshtein==0.20.9
 openai==0.27.0
+python-redis-rate-limit==0.0.8
 python-telegram-bot==13.15
 pyyaml==6.0
