--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,5 +25,14 @@ jobs:
       - name: Deploy to Cloud Run
         run: |
           gcloud config set run/region ${{ secrets.REGION }}
-          gcloud run deploy ${{ secrets.SERVICE_NAME }} --source $(pwd) --allow-unauthenticated --platform managed --set-env-vars REDIS_DSN=${{ secrets.REDIS_DSN }} --set-env-vars TELEGRAM_TOKEN=${{ secrets.TELEGRAM_TOKEN }} --set-env-vars OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
+
+          gcloud run deploy ${{ secrets.SERVICE_NAME }} \
+            --source $(pwd) \
+            --allow-unauthenticated \
+            --platform managed \
+            --set-env-vars REDIS_DSN=${{ secrets.REDIS_DSN }} \
+            --set-env-vars TELEGRAM_TOKEN=${{ secrets.TELEGRAM_TOKEN }} \
+            --set-env-vars OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} \
+            --set-env-vars SENTRY_DSN=${{ secrets.SENTRY_DSN }}
+
           gcloud run services update-traffic ${{ secrets.SERVICE_NAME }} --to-latest
