--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "editor.formatOnSave": true,
   "python.analysis.typeCheckingMode": "basic",
   "python.formatting.provider": "black",
   "isort.args": [
