--- a/memes.yaml
+++ b/memes.yaml
@@ -27,6 +27,8 @@ replies:
     - "Se usasse Kubernetes nada disso teria acontecido..."
   cair:
     - "Se usasse Kubernetes..."
+  perdão:
+    - "Tá perdoado! 😇"
 
 slaps:
   - "Minha mão na sua cara"
