--- a/memes.yaml
+++ b/memes.yaml
@@ -56,6 +56,8 @@ helps:
   - alguem sabe
   - alguem entende
 
+penis: "penis"
+
 porn:
   - Tirem as crianças da sala!!! 🙈
 
@@ -66,4 +68,3 @@ likelihoods:
   - POSSIBLE
   - LIKELY
   - VERY_LIKELY
-
