--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,6 @@ playwright==1.40.0
 python-redis-rate-limit==0.0.8
 python-telegram-bot==13.15
 pyyaml==6.0
+numpy==1.26.2
 redis==4.5.4
 sentry-sdk==1.21.1
