--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,6 +12,26 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.12
+
+      - name: Install Development Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements-dev.txt
+
+      - name: Run lint
+        run: |
+          black --check .
+          isort --check-only --diff .
+          ruff --check .
+
+      - name: Run tests
+        run: |
+          pytest .
+
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v1
         with:
