--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,7 +26,7 @@ jobs:
         run: |
           black --check .
           isort --check-only --diff .
-          ruff --check .
+          ruff .
 
       - name: Run tests
         run: |
