--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,6 +16,8 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: 3.12
+          cache: pip
+          cache-key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt', '**/requirements-dev.txt') }}
 
       - name: Install Development Dependencies
         run: |
@@ -25,8 +27,8 @@ jobs:
       - name: Run lint
         run: |
           black --check .
-          isort --check-only --diff .
-          ruff .
+          isort --check .
+          ruff check .
 
       - name: Run tests
         run: |
